[package]
name = "rust_rollback"
version = "0.1.0"
edition = "2024"
authors = ["Abdel-Nasr Nassam <abdelnassam@gmail.com>"]
description = "Hyper-specialized Rust rollback core for a Godot fighting game."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# The official godot-rust extension binding (gdext)
godot = "0.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
fixed = "1.27"


[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"